<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/activity_main_top_container"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:padding="@dimen/default_padding"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/activity_main_back_button"
            android:layout_width="@dimen/images_size"
            android:layout_height="@dimen/images_size"
            android:background="@color/white"
            android:contentDescription="@string/back_button_content"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck" />
        
        <TextView
            style="@style/title_text"
            android:layout_width="@dimen/zero"
            android:layout_height="@dimen/zero"
            android:layout_marginHorizontal="@dimen/title_horizontal"
            android:gravity="center_vertical"
            android:text="@string/main_title"
            app:layout_constraintBottom_toBottomOf="@id/activity_main_back_button"
            app:layout_constraintEnd_toStartOf="@id/activity_main_search_button"
            app:layout_constraintStart_toEndOf="@id/activity_main_back_button"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageButton
            android:id="@+id/activity_main_search_button"
            android:layout_width="@dimen/images_size"
            android:layout_height="@dimen/images_size"
            android:background="@color/white"
            android:contentDescription="@string/search_button_content"
            android:src="@drawable/ic_search"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/default_padding"
        android:paddingRight="@dimen/default_padding"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_main_top_container">

        <androidx.constraintlayout.widget.ConstraintLayout
            style="@style/notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                style="@style/notification_top_item"
                android:id="@+id/notification1_top_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="@dimen/images_size"
                    android:layout_height="@dimen/images_size"
                    android:contentDescription="@string/logo"
                    android:src="@drawable/AvatarFirst"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="@dimen/big_margin">

                    <TextView
                        style="@style/default_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/first_person"/>

                    <TextView
                        style="@style/time_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/first_time"
                        />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/notification1_middle_item"
                style="@style/default_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/default_padding"
                android:text="@string/first_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/notification1_top_item"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/micro_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/notification1_middle_item">

                <TextView
                    style="@style/replays_text"
                    android:layout_width="@dimen/zero"
                    android:layout_height="@dimen/zero"
                    android:paddingTop="@dimen/micro_margin"
                    android:text="@string/first_replays"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/notification1_button_cool"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/notification1_button_cool"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/light_gray"
                    android:contentDescription="@string/notification_button"
                    android:padding="@dimen/zero"
                    android:src="@drawable/ic_thumb_up_outline"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="TouchTargetSizeCheck" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            style="@style/notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                style="@style/notification_top_item"
                android:id="@+id/notification2_top_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="@dimen/images_size"
                    android:layout_height="@dimen/images_size"
                    android:contentDescription="@string/logo"
                    android:src="@drawable/AvatarSecond"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="@dimen/big_margin">

                    <TextView
                        style="@style/default_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/second_person"/>

                    <TextView
                        style="@style/time_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/second_time"
                        />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/notification2_middle_item"
                style="@style/default_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/default_padding"
                android:text="@string/second_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/notification2_top_item"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/micro_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/notification2_middle_item">

                <TextView
                    style="@style/replays_text"
                    android:layout_width="@dimen/zero"
                    android:layout_height="@dimen/zero"
                    android:paddingTop="@dimen/micro_margin"
                    android:text="@string/second_replays"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/notification2_button_cool"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/notification2_button_cool"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/light_gray"
                    android:contentDescription="@string/notification_button"
                    android:padding="@dimen/zero"
                    android:src="@drawable/ic_thumb_up_outline"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="TouchTargetSizeCheck" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            style="@style/notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                style="@style/notification_top_item"
                android:id="@+id/notification3_top_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="@dimen/images_size"
                    android:layout_height="@dimen/images_size"
                    android:contentDescription="@string/logo"
                    android:src="@drawable/AvatarThird"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="@dimen/big_margin">

                    <TextView
                        style="@style/default_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/third_person"/>

                    <TextView
                        style="@style/time_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/third_time"
                        />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/notification3_middle_item"
                style="@style/default_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/default_padding"
                android:text="@string/third_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/notification3_top_item"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/micro_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/notification3_middle_item">

                <TextView
                    style="@style/replays_text"
                    android:layout_width="@dimen/zero"
                    android:layout_height="@dimen/zero"
                    android:paddingTop="@dimen/micro_margin"
                    android:text="@string/third_replays"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/notification3_button_cool"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/notification3_button_cool"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/light_gray"
                    android:contentDescription="@string/notification_button"
                    android:padding="@dimen/zero"
                    android:src="@drawable/ic_thumb_up_outline"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="TouchTargetSizeCheck" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            style="@style/menu_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/menu_button"
            android:layout_weight="1"
            android:src="@drawable/ic_shopping" />

        <ImageButton
            style="@style/menu_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/menu_button"
            android:layout_weight="1"
            android:src="@drawable/ic_book_open_variant" />

        <ImageButton
            style="@style/menu_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/menu_button"
            android:layout_weight="1"
            android:src="@drawable/ic_cart" />

        <ImageButton
            style="@style/menu_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/menu_button"
            android:layout_weight="1"
            android:src="@drawable/ic_tag_heart" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/menu_end"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/menu_button"
                android:layout_gravity="center"
                android:src="@drawable/ic_heart_filled"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/purple"
                android:text="@string/menu_text"/>
        </LinearLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>